Text overflow in modal fix
Link as one long word was overflowing, fixed with css

--- a/src/sass/components/_modals.scss
+++ b/src/sass/components/_modals.scss
@@ -36,6 +36,10 @@
         }
   }
 
-  .details {
+  ul.details {
       clear: both;
+
+      li.link {
+        word-wrap: break-word;
+      }
   }
